--- a/charts/minio/templates/secret.yaml
+++ b/charts/minio/templates/secret.yaml
@@ -1,20 +1,10 @@
 apiVersion: v1
-data:
-  accessKey: QWtmTzJ6Nlp0S1VI
-  hostname: ZW52LWVwaGVtZXJhbC1lbmNubXktbWluaW8uZXBoZW1lcmFsLWVuY25teS5zdmM=
-  port: OTAwMA==
-  secretKey: ajhYM2o1YWk3ak44
 kind: Secret
 metadata:
-  creationTimestamp: "2023-08-22T19:56:01Z"
-  name: env-ephemeral-encnmy-minio
-  namespace: ephemeral-encnmy
-  ownerReferences:
-  - apiVersion: cloud.redhat.com/v1alpha1
-    controller: true
-    kind: ClowdEnvironment
-    name: env-ephemeral-encnmy
-    uid: 5929082f-f855-442a-a74e-20c06cd8e14d
-  resourceVersion: "2547810561"
-  uid: 248f88a1-0aa0-4d59-990c-660907506464
+  name: minio
+data:
+  hostname: {{ .Values.objectStore.hostname | b64enc }}
+  port: {{ .Values.objectStore.port | b64enc }}
+  accessKey: {{ .Values.objectStore.accessKey | b64enc }}}
+  secretKey: {{ .Values.objectStore.secretKey | b64enc }}
 type: Opaque
