--- a/charts/minio/values.yaml
+++ b/charts/minio/values.yaml
@@ -1,2 +1,8 @@
 images:
   minio: quay.io/cloudservices/minio:RELEASE.2020-11-19T23-48-16Z-amd64
+
+objectStore:
+  hostname: minio.demo.svc
+  port: "9000"
+  accessKey: 9GlWHMZ0f6HQ
+  secretKey: tfwbBLhHbnh7
