--- a/charts/common-infra/charts/minio/templates/secret.yaml
+++ b/charts/common-infra/charts/minio/templates/secret.yaml
@@ -5,6 +5,6 @@ metadata:
 data:
   hostname: {{ .Values.objectStore.hostname | b64enc }}
   port: {{ .Values.objectStore.port | b64enc }}
-  accessKey: {{ .Values.objectStore.accessKey | b64enc }}}
+  accessKey: {{ .Values.objectStore.accessKey | b64enc }}
   secretKey: {{ .Values.objectStore.secretKey | b64enc }}
 type: Opaque
