--- a/charts/common-infra/charts/rbac/templates/secret-rbac-secret.yaml
+++ b/charts/common-infra/charts/rbac/templates/secret-rbac-secret.yaml
@@ -10,7 +10,7 @@ data:
   principal-proxy-host: {{ .Values.secrets.principalProxyHost | b64enc }}
   principal-proxy-port: {{ .Values.secrets.principalProxyPort | b64enc }}
   principal-proxy-protocol: {{ .Values.secrets.principalProxyProtocol | b64enc }}
-  principal-proxy-source-cert: {{ .Value.secrets.principalProxySourceCert | b64enc }}
-  principal-proxy-ssl-verify: {{ .Value.secrets.principalProxySslVerify | b64enc }}
+  principal-proxy-source-cert: {{ .Values.secrets.principalProxySourceCert | b64enc }}
+  principal-proxy-ssl-verify: {{ .Values.secrets.principalProxySslVerify | b64enc }}
   sentry-dsn: {{ .Values.secrets.sentryDsn | b64enc }}
 type: Opaque
