--- a/charts/common-infra/charts/rbac/templates/secret-rbac.yaml
+++ b/charts/common-infra/charts/rbac/templates/secret-rbac.yaml
@@ -3,5 +3,5 @@ kind: Secret
 metadata:
   name: rbac
 data:
-  cdappconfig.json: {{ include "cdappconfig.json" . | b64enc }}
+  cdappconfig.json: {{ include "rbac-cdappconfig.json" . | b64enc }}
 type: Opaque
