--- a/charts/host-inventory/templates/secret_host-inventory.yaml
+++ b/charts/host-inventory/templates/secret_host-inventory.yaml
@@ -5,5 +5,5 @@ metadata:
     app: host-inventory
   name: host-inventory
 data:
-  cdappconfig.json: {{ include "cdappconfig.json" . | b64enc }}
+  cdappconfig.json: {{ include "host-inventory-cdappconfig.json" . | b64enc }}
 type: Opaque
