--- a/charts/edge-api/templates/secret-edge-api.yaml
+++ b/charts/edge-api/templates/secret-edge-api.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  cdappconfig.json: {{ include "cdappconfig.json" . | b64enc }}
+  cdappconfig.json: {{ include "edge-api-cdappconfig.json" . | b64enc }}
 kind: Secret
 metadata:
   labels:
