Add caddy-config to rbac

--- a/charts/rbac-api/templates/deployment-rbac-service.yaml
+++ b/charts/rbac-api/templates/deployment-rbac-service.yaml
@@ -6,18 +6,11 @@ metadata:
     pod: rbac-service
   name: rbac-service
 spec:
-  progressDeadlineSeconds: 600
   replicas: 1
-  revisionHistoryLimit: 10
   selector:
     matchLabels:
       app: rbac
       pod: rbac-service
-  strategy:
-    rollingUpdate:
-      maxSurge: 25%
-      maxUnavailable: 25%
-    type: RollingUpdate
   template:
     metadata:
        labels:
@@ -240,6 +233,78 @@ spec:
           name: model-access-permissions
         - mountPath: /cdapp/
           name: config-secret
+      - name: crcauth
+        image: {{ .Values.images.caddyPlugin }}
+        imagePullPolicy: IfNotPresent
+        ports:
+          - name: auth
+            containerPort: 8080
+            protocol: TCP
+        env:
+          - name: CADDY_PORT
+            value: '8000'
+          - name: CADDY_BOP_URL
+            valueFrom:
+              secretKeyRef:
+                name: caddy-config-rbac-service
+                key: bopurl
+                optional: false
+          - name: CADDY_KEYCLOAK_URL
+            valueFrom:
+              secretKeyRef:
+                name: caddy-config-rbac-service
+                key: keycloakurl
+                optional: false
+          - name: CADDY_WHITELIST
+            valueFrom:
+              secretKeyRef:
+                name: caddy-config-rbac-service
+                key: whitelist
+                optional: false
+        readinessProbe:
+          tcpSocket:
+            port: 8080
+          initialDelaySeconds: 15
+          timeoutSeconds: 2
+          periodSeconds: 10
+          successThreshold: 1
+          failureThreshold: 3
+        terminationMessagePath: /dev/termination-log
+        livenessProbe:
+          tcpSocket:
+            port: 8080
+          initialDelaySeconds: 10
+          timeoutSeconds: 2
+          periodSeconds: 10
+          successThreshold: 1
+          failureThreshold: 3
+        securityContext:
+          capabilities:
+            drop:
+              - ALL
+          runAsUser: 1002090000
+          runAsNonRoot: true
+          allowPrivilegeEscalation: false
+        volumeMounts:
+          - name: kube-api-access-2qld7
+            readOnly: true
+            mountPath: /var/run/secrets/kubernetes.io/serviceaccount
+        terminationMessagePolicy: File
+        resources:
+          limits:
+            cpu: 100m
+            memory: 200Mi
+          requests:
+            cpu: 50m
+            memory: 100Mi
+        securityContext:
+          allowPrivilegeEscalation: false
+          runAsNonRoot: true
+          seccompProfile:
+            type: RuntimeDefault
+          capabilities:
+            drop:
+            - ALL
       dnsPolicy: ClusterFirst
       initContainers:
       - command:
@@ -435,3 +500,10 @@ spec:
         secret:
           defaultMode: 420
           secretName: rbac
+  revisionHistoryLimit: 10
+  strategy:
+    rollingUpdate:
+      maxSurge: 25%
+      maxUnavailable: 25%
+    type: RollingUpdate
+  progressDeadlineSeconds: 600
