--- a/charts/common-infra/charts/mocktitlements/values.yaml
+++ b/charts/common-infra/charts/mocktitlements/values.yaml
@@ -1,8 +1,9 @@
 images:
   mocktitlements: quay.io/cloudservices/mocktitlements:e24820c
+  caddyPlugin: quay.io/cloudservices/crc-caddy-plugin:1c4882e
 
 ingress:
   hostname: entitlements.apps.management-hub.redhat-et.edge-lab.net
 
-keycloak:
-  url: http://sso.demo.svc:8080
+bopUrl: http://mbop.demo.svc:8090
+ssoUrl: http://sso.demo.svc:8080
