--- a/charts/chrome-backend/templates/ingress-chrome-service-api.yaml
+++ b/charts/chrome-backend/templates/ingress-chrome-service-api.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   ingressClassName: openshift-default
   rules:
-  - host: {{ .Values.ingress.host }}
+  - host: {{ .Values.ingress.hostname }}
     http:
       paths:
       - backend:
