--- a/charts/edge-frontend/templates/deployment.yaml
+++ b/charts/edge-frontend/templates/deployment.yaml
@@ -22,7 +22,7 @@ spec:
         app: edge-frontend
     spec:
       containers:
-      - image: {{ .Values.image.edgeFrontend }}
+      - image: {{ .Values.images.edgeFrontend }}
         imagePullPolicy: IfNotPresent
         livenessProbe:
           failureThreshold: 3
