Add missing Helm elements

--- a/charts/host-inventory-api/charts/storage-broker/Chart.yaml
+++ b/charts/host-inventory-api/charts/storage-broker/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: playbook-dispatcher
-description: Playbook Dispatcher service
+name: storage-broker
+description: Storage Broker service
 
 # A chart can be either an 'application' or a 'library' chart.
 #
