--- a/charts/host-inventory-api/charts/ingress/Chart.yaml
+++ b/charts/host-inventory-api/charts/ingress/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: host-inventory
-description: Host Inventory
+name: ingress
+description: Ingress service
 
 # A chart can be either an 'application' or a 'library' chart.
 #
